workloads/enterprise-app/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    # Applying our global platform rules!
    konghq.com/plugins: auth-rule, default-rate-limit, request-tracker
spec:
  ingressClassName: kong
  rules:
  - host: api.demo.local
    http:
      paths:
      # PATH BASED ROUTING
      - path: /dev/foo
        pathType: Prefix
        backend:
          service:
            name: foo-svc # Kustomize will auto-update this to dev-foo-svc!
            port: {number: 80}
      - path: /dev/bar
        pathType: Prefix
        backend:
          service:
            name: bar-svc 
            port: {number: 80}
